--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,10 @@ ul {
   text-decoration: none;
 }
 
+.link:visited {
+  color: var(--primary-text-color);
+}
+
 .container {
   margin: 0 auto;
   width: 1200px;
@@ -110,9 +114,8 @@ ul {
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
 }
-
-.link:hover,
-.link:focus,
+.site-nav .link:hover,
+.site-nav .link:focus,
 .link.contact:hover,
 .link.contact:focus,
 .link.address:hover,
@@ -122,16 +125,46 @@ ul {
 }
 
 .link.contact {
+  align-content: center;
+  display: inline-flex;
   font-weight: 500;
   line-height: 1.1;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
 }
 
+.contact-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.link.contact:hover .contact-icon,
+.link.contact:focus .contact-icon {
+  fill: var(--accent-color);
+}
+
 /* Hero */
 
 .hero {
   background-color: var(--footer-background-color);
+}
+
+.hero.overlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../img/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hero > .container {
@@ -195,16 +228,46 @@ ul {
   color: var(--secondary-text-color);
 }
 
-.benefits {
+.benefits,
+.clients,
+.projects {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
 .benefits-list,
 .features-list,
-.team-list {
+.team-list,
+.clients-list {
   display: flex;
   gap: 30px;
+}
+
+.benefits-list > .list-item::before {
+  content: "";
+  display: block;
+  height: 120px;
+  background-color: var(--filter-background-color);
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.benefits-list > .list-item:nth-child(1):before {
+  background-image: url("../img/antenna.svg");
+}
+
+.benefits-list > .list-item:nth-child(2):before {
+  background-image: url("../img/clock.svg");
+}
+
+.benefits-list > .list-item:nth-child(3):before {
+  background-image: url("../img/diagram.svg");
+}
+
+.benefits-list > .list-item:nth-child(4):before {
+  background-image: url("../img/astronaut.svg");
 }
 
 .main-section.team {
@@ -276,6 +339,80 @@ ul {
 .card-text {
   font-size: 16px;
   line-height: 1.18;
+  margin-bottom: 16px;
+}
+
+.social-list {
+  display: flex;
+}
+
+.team-container .social-list {
+  justify-content: center;
+}
+
+.social-list .social-list-link {
+  display: inline-flex;
+  justify-content: center;
+  padding: 0;
+  height: 44px;
+  width: 44px;
+  background-color: var(--primary-white-color);
+  border-radius: 100%;
+}
+
+.social-list .social-list-link:hover,
+.social-list .social-list-link:focus {
+  background-color: var(--accent-color);
+}
+
+.social-list > .item + .item {
+  margin-left: 10px;
+}
+
+.team-social-icon {
+  align-self: center;
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+}
+
+.social-list-link:hover .team-social-icon,
+.social-list-link:focus .team-social-icon {
+  fill: var(--primary-white-color);
+}
+
+.clients-title {
+  margin-bottom: 50px;
+}
+
+.clients-list {
+  justify-content: center;
+}
+
+.clients-link {
+  display: inline-flex;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 3px;
+}
+
+.client-icon {
+  align-self: center;
+  width: 106px;
+  height: 60px;
+  fill: #afb1b8;
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.clients-link:hover .client-icon,
+.clients-link:focus .client-icon {
+  fill: var(--accent-color);
 }
 
 /* Footer */
@@ -297,12 +434,48 @@ ul {
   background-color: var(--footer-background-color);
 }
 
+.site-footer > .container {
+  display: flex;
+}
+
+.footer-social {
+  margin-left: 70px;
+  padding-top: 12px;
+}
+
+.social-title {
+  color: var(--primary-white-color);
+  font-family: "Roboto";
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
 .footer-item {
   margin-bottom: 9px;
 }
 
 .footer-item:last-child {
   margin-bottom: 0;
+}
+
+.footer-social .social-list-link {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-social-icon {
+  align-self: center;
+  width: 20px;
+  height: 20px;
+  fill: var(--primary-white-color);
+}
+
+.social-list-link:hover .footer-social-icon,
+.social-list-link:focus .footer-social-icon {
+  background-color: var(--accent-color);
 }
 
 .address-text {
@@ -315,11 +488,6 @@ ul {
 }
 
 /* Portfolio Main */
-
-.projects {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 
 .filter {
   margin-bottom: 50px;
@@ -369,6 +537,11 @@ ul {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 3 - 30px);
+}
+
+.portfolio-card:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-section {
