--- a/css/styles.css
+++ b/css/styles.css
@@ -436,17 +436,18 @@ ul {
 
 .site-footer > .container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-social {
   margin-left: 70px;
-  padding-top: 12px;
 }
 
 .social-title {
   color: var(--primary-white-color);
   font-family: "Roboto";
   font-style: normal;
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.03em;
@@ -539,7 +540,12 @@ ul {
   flex-basis: calc(100% / 3 - 30px);
 }
 
-.portfolio-card:hover {
+.portfolio-link {
+  display: block;
+}
+
+.portfolio-link:hover,
+.portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
